--- a/src/App.less
+++ b/src/App.less
@@ -83,6 +83,12 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  li {
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
 }
 
 .taskListItem {
