TaskListItem component changes

--- a/src/App.less
+++ b/src/App.less
@@ -102,6 +102,14 @@
   p {
     margin: 0 0 10px;
   }
+
+  &--done {
+    opacity: 0.5;
+  }
+
+  &--overdue {
+    background: rgb(255, 183, 183);
+  }
 }
 
 .taskListItemBottom {
