--- a/src/App.less
+++ b/src/App.less
@@ -2,7 +2,7 @@
   padding: 30px;
   max-width: 500px;
   margin: 30px auto;
-  background: #f1f4fc;
+  background: gray;
 }
 
 /* Add Form */
@@ -59,7 +59,7 @@
 
   input {
     padding: 8px;
-    background: white;
+    background: gray;
   }
 }
 
@@ -74,8 +74,6 @@
   padding: 15px 20px;
   font-size: 1em;
   border: none;
-  background: black;
-  color: white;
 }
 
 /* TaskList */
@@ -94,7 +92,7 @@
 
 .taskListItem {
   padding: 15px;
-  background: white;
+  border: 1px solid black;
 
   h3 {
     margin: 0 0 10px;
@@ -109,7 +107,7 @@
   }
 
   &--overdue {
-    background: rgb(255, 183, 183);
+    background: rgb(134, 88, 88);
   }
 }
 
