--- a/src/index.less
+++ b/src/index.less
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html {
+  @media (prefers-color-scheme: dark) {
+    color-scheme: dark;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
