made tasks editable

--- a/src/App.less
+++ b/src/App.less
@@ -1,8 +1,10 @@
+@bg2: lightgray;
+
 .app {
   padding: 30px;
   max-width: 500px;
   margin: 30px auto;
-  background: gray;
+  background: @bg2;
 }
 
 /* Add Form */
@@ -10,7 +12,7 @@
 .form {
   margin-bottom: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid black;
 
   legend {
     font-size: 1.2em;
@@ -59,7 +61,7 @@
 
   input {
     padding: 8px;
-    background: gray;
+    background: @bg2;
   }
 }
 
