--- a/src/App.less
+++ b/src/App.less
@@ -102,7 +102,7 @@
   padding: 0;
   list-style-type: none;
 
-  li {
+  & > li {
     &:not(:last-child) {
       margin-bottom: 15px;
     }
@@ -133,6 +133,16 @@
 .taskListItemBottom {
   display: flex;
   justify-content: space-between;
+}
+
+.taskListItemFiles {
+  margin-top: 10px;
+
+  & > ul {
+    margin: 5px 0 0;
+    padding: 0;
+    list-style-type: none;
+  }
 }
 
 /* Footer */
